--- a/front_end/advme-react/src/App.css
+++ b/front_end/advme-react/src/App.css
@@ -31,6 +31,11 @@ div.animation{
   height: 20%;
  
 }
+
+div.loading {
+  width: 80%;
+  height: 20%;
+}
 .userPage {
   padding-right: 10%;
   padding-left: 10%;
